[package]
name = "thread_master"
version = "0.1.0"
authors = ["Kevin Mullins <kevin@pnotequalnp.com>"]
edition = "2018"

[dependencies]
serde_json = "1"
url = "2"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]

[dependencies.tokio]
version = "1.6"
features = ["macros", "rt-multi-thread"]
